--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
 
                <br><!--Salto de linea-->
                <br><!--Salto de linea-->
+               <br><!--Salto de linea-->
                <hr size="3" width="65%" color="Yellow"></hr>
-               
+
             </big>
             <br>
             <font>Publicidad</font>
